cloud_computing/cloud_project/CodeSource/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techshop
  labels:
    app.kubernetes.io/name: techshop
    app.kubernetes.io/part-of: techshop
